--- a/static/css/home.css
+++ b/static/css/home.css
@@ -27,16 +27,23 @@ p{
 #header-id{
     overflow: hidden !important;
     max-width: 100vw;
-    height: 70px;
+    height: 55px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: #F6921D;
 }
-
+.separador-header{
+    width: 2px;
+    height: 5%;
+    background-color: #FFFFFF;
+    position: absolute;
+    left: 150px;
+}
 .img-logo{
-    width: 200px;
+    height: 60px;
+    margin-top: 7px;
 }
 
 .input-hamburguer{
@@ -59,9 +66,9 @@ p{
     box-sizing: border-box;
     margin: 10px;
     width: 110px;
-    height: 70px;
+    height: 54px;
     background-color: transparent;
-    border: transparent;
+    border: transparent; 
     color: white;
     font-size: 20px;
     text-align: center;
@@ -191,7 +198,9 @@ nav{
     padding: 50px 0px 100px 0px;
     color: #F88200;
 }
-
+.slick-dots{
+    height: 35px;
+}
 .slide-nav {
     visibility: hidden;
 }
@@ -221,8 +230,12 @@ nav{
 .text-slide {
     width: 340px;
     height: 300px;
-    margin-top: 0px;
+    margin-top: -20px; 
     margin-right: 20px;
+}
+.text-slide p{
+    /* overflow-y: scroll; */
+    height: 250px;
 }
 
 .slick-dots li button:before {
@@ -360,7 +373,8 @@ nav{
 }
 
 .center {
-    padding-top: 10px;
+    /* padding-top: 10px; */
+    padding: 15px;
     display: flex;
     justify-content: center;
 }
@@ -459,30 +473,30 @@ footer li{
         box-sizing: border-box;
     }
     .menu_hamburguer {
-        background: #fff;
-        border-radius: 10%;
-        width: 50px;
-        height: 50px;
+        background: #F6921D;
+        /* border-radius: 10%; */
+        width: 61px;
+        height: 54px;
         position: fixed;
-        top: 9px;
-        right: 10px;
+        top: 0px;
+        right: 0px;
         cursor: pointer;
-        box-shadow: 0 0 0 0px white, 0 0 0 0px white;
+        box-shadow: 0 0 0 0px#F6921D, 0 0 0 0px #F6921D;
         transition: box-shadow 1.1s cubic-bezier(.19,1,.22,1);
         z-index: 10;
     }
-    .menu_hamburguer:hover{
+    /*.menu_hamburguer:hover{
         box-shadow: 0 0 0 4px white, 0 0 0 4px white;
         z-index: 1;
-    }
+    }*/
     .hamburguer{
         display: block;
-        background: black;
+        background:#FFFFFF;
         width: 30px;
         height: 3px;
         position: relative;
-        top: 23px;
-        right: -11px;
+        top: 24px;
+        right: -15px;
         transition: 0.5s ease-in-out;
         
     }
@@ -510,7 +524,7 @@ footer li{
 
     .hamburguer:before,
     .hamburguer:after{
-        background-color: black;
+        background-color: #FFFFFF;
         content: '';
         display: block;
         width: 100%;
