--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -625,7 +625,14 @@
             
        </div>
        <div id="codebyciti">
-            dasdbausbdu
+           <p>made with</p>
+            <img src="{% static  'fotos/openCode.svg'%}"/>
+            <p>and</p>
+            <img src="{% static  'fotos/coracao.svg'%}"/>
+            <p>by</p>
+            <img src="{% static  'fotos/citiCode.png'%}" class="citiFooter"/>
+       
+       <!--<img src="{% static 'fotos/citiCode.svg' %}"/>-->
        </div>
    </footer>
     <script
