mudanca no svg55

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -249,7 +249,7 @@
         </div> 
     </section>
     <section class="sec-parcerias" id="sec-parcerias-id">
-        <div class="svgParcerias svgs">
+        <!-- <div class="svgParcerias svgs">
             <svg xmlns="http://www.w3.org/2000/svg" width="1310.604" height="637.798" viewBox="0 0 1310.604 637.798">
                 <defs>
                     <style>
@@ -345,6 +345,104 @@
                     <path id="Caminho_42" data-name="Caminho 42" class="clsw-4" d="M-3718.374,4774.4l32.736,103.024-186.154-39.457Z" transform="translate(3869 -1170)"/>
                 </g>
             </svg>   
+        </div> -->
+        <div class="svgParcerias svgs">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1310.603" height="637.798" viewBox="0 0 1310.603 637.798">
+                <defs>
+                  <style>
+                    .clsh-1 {
+                      fill: #e4a385;
+                      stroke: #e4a385;
+                    }
+              
+                    .clsh-2 {
+                      fill: #c86c01;
+                      stroke: #c86c01;
+                    }
+              
+                    .clsh-3 {
+                      fill: #f6921d;
+                      stroke: #f6921d;
+                    }
+              
+                    .clsh-14, .clsh-4 {
+                      fill: #ce5a24;
+                    }
+              
+                    .clsh-5 {
+                      fill: #e2820f;
+                      stroke: #e2820f;
+                    }
+              
+                    .clsh-6 {
+                      fill: #ffb865;
+                      stroke: #ffb865;
+                    }
+              
+                    .clsh-7 {
+                      fill: #f70;
+                      stroke: #f70;
+                    }
+              
+                    .clsh-8 {
+                      fill: #c63f00;
+                      stroke: #c63f00;
+                    }
+              
+                    .clsh-9 {
+                      fill: rgba(198,63,0,0.48);
+                      stroke: #d46f40;
+                    }
+              
+                    .clsh-10 {
+                      fill: #d24f2e;
+                      stroke: #d24f2e;
+                    }
+              
+                    .clsh-11 {
+                      fill: #d57345;
+                      stroke: #d57345;
+                    }
+              
+                    .clsh-12, .clsh-13, .clsh-14 {
+                      stroke: none;
+                    }
+              
+                    .clsh-13 {
+                      fill: #d16533;
+                    }
+                  </style>
+                </defs>
+                <g id="Grupo_55" data-name="Grupo 55" transform="translate(27.051 -3094.565)">
+                  <path id="Caminho_40" data-name="Caminho 40" class="clsh-1" d="M-3532.591,4696.353l-152.654,181.987-32.327-103.938Z" transform="translate(3854.003 -1147)"/>
+                  <g id="Grupo_54" data-name="Grupo 54">
+                    <path id="Caminho_16" data-name="Caminho 16" class="clsh-2" d="M0,150.754,23.711,0,185.994,150.754" transform="matrix(0.996, 0.087, -0.087, 0.996, 1097.839, 3315.415)"/>
+                    <path id="Caminho_12" data-name="Caminho 12" class="clsh-3" d="M0,316.731H246L121.551,0" transform="translate(116.773 3342.978) rotate(-73)"/>
+                    <g id="Subtração_1" data-name="Subtração 1" class="clsh-4" transform="translate(-17.496 3271.5)">
+                      <path class="clsh-12" d="M 434.204833984375 161.0031890869141 L 0.5042832493782043 161.0031890869141 L 0.5000054836273193 161.0031890869141 L 0.5000054836273193 0.7178665399551392 L 434.204833984375 161.0031890869141 Z"/>
+                      <path class="clsh-13" d="M 1 1.4356689453125 L 1 160.5031890869141 L 431.4095458984375 160.5031890869141 L 1 1.4356689453125 M 0 -3.0517578125e-05 L 437.0001220703125 161.5031890869141 L 0.5042724609375 161.5031890869141 L 0.5042724609375 322.499755859375 L 1.3577880859375 322.499755859375 L 0 323.0016784667969 L 0 -3.0517578125e-05 Z"/>
+                    </g>
+                    <path id="Caminho_10" data-name="Caminho 10" class="clsh-5" d="M18951.5,4079l-436.6-337.417v176.767Z" transform="translate(-18531.994 -646)"/>
+                    <path id="Caminho_11" data-name="Caminho 11" class="clsh-6" d="M19017.824,3844.174l129.389,100.535-202.068,131.783Z" transform="translate(-18525.994 -643)"/>
+                    <path id="Caminho_13" data-name="Caminho 13" class="clsh-3" d="M19153.213,3946.739l239.453,129.823h-440.838Z" transform="translate(-18531.994 -644.82)"/>
+                    <path id="Caminho_29" data-name="Caminho 29" class="clsh-7" d="M-2734.178,4465.157l-55.386,231.465-443.492-248.131Z" transform="translate(3854.004 -1147)"/>
+                    <g id="Caminho_30" data-name="Caminho 30" class="clsh-4" transform="translate(3854.004 -1148)">
+                      <path class="clsh-12" d="M -2791.820556640625 4697.28515625 L -3430.13330078125 4580.39013671875 L -2999.050537109375 4580.39013671875 L -2791.820556640625 4697.28515625 Z"/>
+                      <path class="clsh-14" d="M -2794.661865234375 4696.2568359375 L -2999.181884765625 4580.89013671875 L -3424.627197265625 4580.89013671875 L -2794.661865234375 4696.2568359375 M -2788.979248046875 4698.31396484375 L -3435.639404296875 4579.89013671875 L -2998.919189453125 4579.89013671875 L -2788.979248046875 4698.31396484375 Z"/>
+                    </g>
+                    <path id="Caminho_32" data-name="Caminho 32" class="clsh-8" d="M-3054.269,4646.531v195.561l-266.146-241.871Z" transform="translate(3854.004 -1147)"/>
+                    <path id="Caminho_33" data-name="Caminho 33" class="clsh-9" d="M-3054.269,4842.091l-348.189-100.877,82.07-141.912Z" transform="translate(3854.004 -1147)"/>
+                    <path id="Caminho_34" data-name="Caminho 34" class="clsh-10" d="M-3320.414,4600.221l-80.73,138.5-35.511-160.456Z" transform="translate(3854.003 -1149)"/>
+                    <path id="Caminho_35" data-name="Caminho 35" class="clsh-8" d="M-3436.489,4580.271l-434.49-.485,99.784,34.415,370.35,127.731-285.708,136.208" transform="translate(3854.003 -1147)"/>
+                    <path id="Caminho_36" data-name="Caminho 36" class="clsh-11" d="M-3769.41,4615.095l84.174,260.413,151.778-179.18-347.4,146.968" transform="translate(3854.003 -1147)"/>
+                    <path id="Caminho_37" data-name="Caminho 37" class="clsh-10" d="M-3533.458,4696.117l-184.109,78.285-51.034-159Z" transform="translate(3854.003 -1147)"/>
+                    <path id="Caminho_39" data-name="Caminho 39" class="clsh-1" d="M-3869.388,4579.917l101.171,35.021-101.171,204.676Z" transform="translate(3854.004 -1147)"/>
+                    <path id="Caminho_41" data-name="Caminho 41" class="clsh-11" d="M-3400.845,4741.5l-34.9-162.529-97.124,116.346Z" transform="translate(3854.004 -1147)"/>
+                  </g>
+                  <path id="Caminho_42" data-name="Caminho 42" class="clsh-11" d="M-3718.374,4774.4l32.736,103.024-186.154-39.457Z" transform="translate(3854.003 -1147)"/>
+                </g>
+              </svg>
+              
         </div>
         <h2>PARCERIAS</h2>
         <div id="parcerias">
